# django-embargoed

./: .gitignore  MANIFEST.in  readme.md  requirements.txt  setup.cfg
django_embargoed.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
embargoed/: apps.py  middleware.py
embargoed/templates/embargoed/: index.html
