[metadata]
name = django-embargoed
version = 1.0
description = Django middleware to block visitors from Russia due to the Ukraine invasion
long_description = file: README.md
author = Ronald Langeveld
author_email = hi@ronaldlangeveld.com
url = 'https://github.com/ronaldlangeveld/django-embargoed',   # Provide either the link to your github or to your website
download_url = 'https://github.com/ronaldlangeveld/django-embargoed/blob/master/dist/django-embargoed-1.0.tar.gz',    # I explain this later on
keywords = ['Django', 'Russia', 'block],   # Keywords that define your package best
license = MIT 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.2
install_requires =
    Django >= 3.2
    maxminddb==2.2.0